Add migration for slide template index
